# fpl0.panel

./: CLAUDE.md  README.md  REVIEW.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
.claude/plans/: editor-ux-fixes.md
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cloudflare.rs  commands.rs  config.rs  content.rs  devserver.rs  frontmatter.rs  git.rs  lib.rs  main.rs  security.rs  types.rs  watcher.rs
src/components/: ConfirmDialog.tsx  MdxEditor.tsx  MetadataPanel.tsx  SearchModal.tsx  Sidebar.tsx  TipTapEditor.tsx  ToastContainer.tsx
src/components/editor/: BubbleToolbar.tsx  CodeBlockNode.ts  DefinitionList.ts  DetailsNode.ts  FigureNode.ts  FootnoteDefNode.ts  FootnoteRefNode.ts  InlineJsxMark.ts  MermaidNode.ts  PassthroughBlockNode.ts  SlashCommandMenu.ts  TwitterCardNode.ts  YouTubeEmbedNode.ts
src/lib/: commands.ts  mdx.ts  store.ts  yaml.ts
src/lib/codemirror/: slash-commands.ts  theme.ts
src/lib/mdx/: frontmatter.ts  imports.ts  index.ts  parser.ts  serializer.ts  types.ts  utils.ts
src/lib/stores/: cfcache.ts  config.ts  content.ts  health.ts  (+7 more)
src/styles/: analytics.css  code-block.css  content-list.css  editor.css  global.css  library.css  metadata.css  onboarding.css  prose.css  settings.css  sidebar.css  tables.css  tags.css  tokens.css
src/views/: AnalyticsView.tsx  AppDetailView.tsx  AppShell.tsx  ContentListView.tsx  CreateView.tsx  EditorView.tsx  LibraryView.tsx  OnboardingScreen.tsx  SettingsView.tsx
