[package]
name = "fpl0-panel"
version = "0.1.0"
description = "Desktop CMS for fpl0.blog"
authors = ["Filipe Lima"]
edition = "2021"

[lib]
name = "fpl0_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
chrono = "0.4"
notify = "7"
notify-debouncer-mini = "0.5"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
